// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`useFormik/jodValidation > form with array fields 1`] = `
{
  "email": "Invalid email address",
  "friends": [
    {
      "name": "Too small: expected string to have >=3 characters",
    },
    {
      "name": "Too small: expected string to have >=3 characters",
    },
  ],
  "name": "Too small: expected string to have >=3 characters",
}
`;

exports[`useFormik/jodValidation > form with array fields 2`] = `{}`;

exports[`useFormik/jodValidation > form with array fields 3`] = `
{
  "friends": [
    {
      "name": "Too small: expected string to have >=3 characters",
    },
  ],
}
`;

exports[`useFormik/jodValidation > simple form validation 1`] = `
{
  "email": "Invalid email address",
  "name": "Too small: expected string to have >=3 characters",
}
`;

exports[`useFormik/jodValidation > simple form validation 2`] = `{}`;
